{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 28,
  "lineage": "b157cb72-db6b-6940-4bbc-115a51132474",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057f2cd37edb0bfa0",
            "association_id": "eipassoc-03daa2349483e2e6e",
            "domain": "vpc",
            "id": "eipalloc-057f2cd37edb0bfa0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09dd468b48b840507",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-52-70-119-164.compute-1.amazonaws.com",
            "public_ip": "52.70.119.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:internet-gateway/igw-07613d96eaebd2c03",
            "id": "igw-07613d96eaebd2c03",
            "owner_id": "367591148304",
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057f2cd37edb0bfa0",
            "association_id": "eipassoc-03daa2349483e2e6e",
            "connectivity_type": "public",
            "id": "nat-09758bd532ec8b907",
            "network_interface_id": "eni-09dd468b48b840507",
            "private_ip": "10.0.1.145",
            "public_ip": "52.70.119.164",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02ab58166fc369ac5",
            "tags": {
              "Name": "automated-NAT"
            },
            "tags_all": {
              "Name": "automated-NAT"
            }
          },
          "dependencies": [
            "aws_eip.NAT",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "databse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07d440d60dd4b506e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09758bd532ec8b907",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d440d60dd4b506e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT",
            "aws_nat_gateway.gw",
            "aws_route_table.database_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0152bd39278caa2331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09758bd532ec8b907",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0152bd39278caa233",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT",
            "aws_nat_gateway.gw",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:route-table/rtb-07d440d60dd4b506e",
            "id": "rtb-07d440d60dd4b506e",
            "owner_id": "367591148304",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09758bd532ec8b907",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-database-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-database-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:route-table/rtb-0152bd39278caa233",
            "id": "rtb-0152bd39278caa233",
            "owner_id": "367591148304",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09758bd532ec8b907",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-private-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-private-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:route-table/rtb-06116dc3b7fdcd97e",
            "id": "rtb-06116dc3b7fdcd97e",
            "owner_id": "367591148304",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07613d96eaebd2c03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-public-route",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-public-route",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014f877a351f2d99d",
            "route_table_id": "rtb-07d440d60dd4b506e",
            "subnet_id": "subnet-09bcdb5d9409beb1f"
          },
          "dependencies": [
            "aws_route_table.database_route_table",
            "aws_subnet.database_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0210f154e28d2081d",
            "route_table_id": "rtb-0152bd39278caa233",
            "subnet_id": "subnet-087c38c470b536714"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b4a6cf1bbb2feed",
            "route_table_id": "rtb-06116dc3b7fdcd97e",
            "subnet_id": "subnet-02ab58166fc369ac5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:subnet/subnet-09bcdb5d9409beb1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bcdb5d9409beb1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367591148304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-database-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-database-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:subnet/subnet-087c38c470b536714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087c38c470b536714",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367591148304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-private-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-private-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:subnet/subnet-02ab58166fc369ac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab58166fc369ac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367591148304",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1-public-subnet",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cff5d1f58e382ab8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:367591148304:vpc/vpc-0cff5d1f58e382ab8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026c4609c59d20a0a",
            "default_route_table_id": "rtb-0f3363d103fcee43b",
            "default_security_group_id": "sg-0288cbdb83cc53607",
            "dhcp_options_id": "dopt-0da205ae9ad3bb562",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cff5d1f58e382ab8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3363d103fcee43b",
            "owner_id": "367591148304",
            "tags": {
              "Environment": "Dev",
              "Name": "timing-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "timing-1",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}